--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 * {
     padding: 0;
     margin: 0;
@@ -24,7 +23,7 @@ p, h1 {
 }
 
 h1 {
-    font-family: Montserrat;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 4em;
@@ -49,7 +48,7 @@ button {
     -webkit-box-shadow: 0px 0px 52px 0px rgba(58, 213, 169, 1);
     -moz-box-shadow: 0px 0px 52px 0px rgba(58, 213, 169, 1);
     box-shadow: 0px 0px 52px 0px rgba(58, 213, 169, 1);
-    font-family: Montserrat;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 70px;
@@ -59,7 +58,7 @@ button {
 }
 
 h5 {
-    font-family: Montserrat;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-style: normal;
     font-weight: lighter;
     font-size: 1em;
@@ -71,7 +70,7 @@ h5 {
 
 p#texte {
     padding-top: 3%;
-    font-family: Montserrat;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 2em;
@@ -81,7 +80,7 @@ p#texte {
 }
 
 p#compteur{
-font-family: Montserrat;
+font-family: Verdana, Geneva, Tahoma, sans-serif;
 font-style: normal;
 font-weight: normal;
 font-size: 3em;
